2013-07-01 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * MergeNTUP_trf.py Add NTUP_COMMON to LODPK
    * tagging as PATJobTransforms-00-05-16

2013-06-20 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * DPDUtils.py
      - Remove references to old internal variables in SetupDPDIncludes
    * Tagging as PATJobTransforms-00-05-15

2013-06-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * DPDUtils.py
      - Patch SetupDPDIncludes to return the list of output types for
        which a pre/postInclude was used, instead of just a boolean
    - Patch from Wolfgang Ehrenfeld
    * skeleton.MergeRDO.py Add support for {pre/post}{Exec/Include}
    * Tagging as PATJobTransforms-00-05-14

2013-06-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
	- Patches from Zachary Marshall
	* Configuration.py Add "AddNTUP_SUSYTRUTH" NTUP type
	* skeleton.AODtoDPD_trf.py New handling for NTUP_SUSYTRUTH
	* Reco_trf.py Add NTUP_SUSYTRUTH to LODPK
	* MergeNTUP_trf.py Add NTUP_SUSYTRUTH to LODPK
    * Tagging as PATJobTransforms-00-05-13

2013-05-29 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added the capability in ESDtoDPD and AODtoDPD jobs to specify
	  pre/post-include scripts in the jobProperties of the DPD
	  types.
	* This needed some new functions in DPDUtils.py and some extension
	  of skeleton.AODtoDPD_trf.py and skeleton.ESDtoDPD_trf.py.
	* Tagging as PATJobTransforms-00-05-12

2013-04-16 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Rename DAODM_HSG1 to DAOD_HSG1 in LODPK

2013-04-04 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * rhadd.py Generate temporary filenames with the prefix 'tmp.'
    * Tagging as PATJobTransforms-00-05-11

2013-03-28 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Reco_trf.py Add embedded NTUP types to LODPK
    * MergeNTUP_trf.py Add embedded NTUP types to LODPK

2013-03-22 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * skeleton.ValidateD3PD_trf.py