@@ -1,3 +1,7 @@
+2013-08-01 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * skeleton.AODtoRED_tf.py
+      - New skeleton for reducing AOD to DAOD_RED format
+
 2013-07-01 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * MergeNTUP_trf.py Add NTUP_COMMON to LODPK
     * tagging as PATJobTransforms-00-05-16
